# meeting-copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: calendar.py  llm.py  main.py  schemas.py  search.py  store.py
app/static/: styles.css
app/templates/: index.html
data/: seed_examples.md
tests/: test_end_to_end.py  test_schemas.py
