[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-copilot"
version = "0.1.0"
description = "LLM meeting minutes & action-items copilot"
authors = [{name = "<your-name>", email = "<you@example.com>"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.7.0",
  "openai>=1.40.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "sqlalchemy>=2.0.25",
  "jinja2>=3.1.2",
  "python-dateutil>=2.9.0.post0"
]

[project.scripts]
meeting-copilot = "app.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
